# AnimeKingR

./: .gitignore  Notebook.ipynb  README.md  requirements.txt  setup.cfg  setup.py  update-version
.github/workflows/: python-publish.yml
akr-download/: __main__.py  extension.py
akr_download/: __main__.py
akr_download/_internals/: add_to_json.py  akr-extensions  extension.py  list_extensions.py  remove_from_json.py
anime-bot/: __main__.py
anime_king_r/: __main__.py  main.py
automations/: build-unpack.sh  install.sh  uninstall.sh
lib/akr_download/: __main__.py
lib/akr_extensions/: __init__.py  __main__.py  add_to_json.py  list_extensions.py  remove_from_json.py
notebooks/: Notebook.ipynb
scripts/: akr-download  akr-extensions  anime-bot
src/: anime-bot  bot.py
src/.ipynb_checkpoints/: Notebook-checkpoint.ipynb
test/: setup-virtual-env.sh
tests/: something.js
