[metadata]
name = anime_king_r
version = 0.2.3
author = GhoulKingR
author_email = oduahchigozie46@gmail.com
description = An anime bot to download your favourite animes
url = https://github.com/GhoulKingR/AnimeKingR
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages =
    akr-download
scripts =
    ./scripts/akr-download

install_requires =
    requests==2.31.0
    selenium==4.16.0
    tqdm==4.66.1
    setuptools==68.1.2
    colorama==0.4.6
    akr_extensions_sdk

[options.packages.find]
where = src
