[metadata]
name = anime_king_r
version = 0.2.3
author = GhoulKingR
author_email = oduahchigozie46@gmail.com
description = An anime bot to download your favourite animes
url = https://github.com/GhoulKingR/AnimeKingR
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
package_dir =
    = lib
packages =
    akr_download
    akr_extensions
    
scripts =
    ./scripts/akr-download
    ./scripts/akr-extensions

install_requires =
    requests==2.31.0
    selenium==4.16.0
    tqdm==4.66.1
    setuptools==68.1.2
    colorama==0.4.6

[options.package_data]
akr_extensions =
    *.json

[options.packages.find]
where = src
